[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/Minion/Enemy/Equipment/enemy_weapon.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Minion/Enemy/Equipment/scream.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Minion/timers.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Minion/Healthbar.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/Minion/enemy/Bat.gd" type="Script" id=5]

[sub_resource type="BoxShape" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 0, 0.140625, 1 )
metallic = 1.0
roughness = 0.0

[sub_resource type="CubeMesh" id=3]
material = SubResource( 2 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.92549, 0.721569, 0.027451, 1 )

[sub_resource type="BoxShape" id=5]

[sub_resource type="BoxShape" id=6]

[node name="BAT" type="KinematicBody" groups=[
"Enemy",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
script = ExtResource( 5 )
weapon = ExtResource( 1 )
firebool = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="hitbox" type="Area" parent="."]
input_ray_pickable = false
angular_damp = 1.0

[node name="CollisionShape" type="CollisionShape" parent="hitbox"]
shape = SubResource( 5 )

[node name="agro_zone" type="Area" parent="."]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0.515713, 0 )
input_ray_pickable = false
angular_damp = 1.0

[node name="CollisionShape" type="CollisionShape" parent="agro_zone"]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0 )
shape = SubResource( 6 )

[node name="attack_zone" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.515713, 0 )
input_ray_pickable = false
angular_damp = 1.0

[node name="CollisionShape" type="CollisionShape" parent="attack_zone"]
transform = Transform( 2.5, 0, 0, 0, 2, 0, 0, 0, 2.5, 0, 0, 0 )
shape = SubResource( 6 )

[node name="PositionWeapon" type="Position3D" parent="."]
transform = Transform( 0.0589055, 0, -0.998264, 0.0352044, -0.999378, 0.00207734, -0.997642, -0.0352657, -0.0588689, 0.0952661, 0.210661, -1.11059 )

[node name="FirePos" type="Position3D" parent="PositionWeapon"]
transform = Transform( 0.997643, 0.0352045, 0.0589057, 0.0352657, -0.999378, 8.53948e-09, 0.058869, 0.00207734, -0.998263, 1.45468, -0.094281, -0.403092 )

[node name="Healthbar" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.36354, 0 )

[node name="fireTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="timers" parent="." instance=ExtResource( 3 )]

[node name="flyTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="notflyTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Timerforfly" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="RayCast" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, -20 )
[connection signal="body_entered" from="agro_zone" to="." method="_on_agro_zone_body_entered"]
[connection signal="body_exited" from="agro_zone" to="." method="_on_agro_zone_body_exited"]
[connection signal="body_entered" from="attack_zone" to="." method="_on_attack_zone_body_entered"]
[connection signal="body_exited" from="attack_zone" to="." method="_on_attack_zone_body_exited"]
[connection signal="timeout" from="fireTimer" to="." method="_on_fireTimer_timeout"]
[connection signal="timeout" from="timers/timeFlaming" to="." method="_on_timeFlaming_timeout"]
[connection signal="timeout" from="timers/max_flame_secondTimer" to="." method="_on_max_flame_secondTimer_timeout"]
[connection signal="timeout" from="timers/StunTimer" to="." method="_on_StunTimer_timeout"]
[connection signal="timeout" from="timers/can_StunTimer" to="." method="_on_can_StunTimer_timeout"]
[connection signal="timeout" from="timers/SlowTimer" to="." method="_on_SlowTimer_timeout"]
[connection signal="timeout" from="timers/rootTimer" to="." method="_on_rootTimer_timeout"]
[connection signal="timeout" from="flyTimer" to="." method="_on_flyTimer_timeout"]
[connection signal="timeout" from="notflyTimer" to="." method="_on_notflyTimer_timeout"]
[connection signal="timeout" from="Timerforfly" to="." method="_on_Timerforfly_timeout"]

[editable path="timers"]
